style: Include style refinements Enforce GMap_Wrapper has 100% width in editing modal Ensure .selected-bckg class remains visible without :hover

--- a/assets/styles/partials/_event-modal.scss
+++ b/assets/styles/partials/_event-modal.scss
@@ -86,7 +86,10 @@
           .material-icons {
             left: 0.35rem;
             right: auto;
-            &.selected-bckg { @extend %mdi-invert; }
+            &.selected-bckg {
+              @extend %visible;
+              opacity: 1 !important;
+            }
           }
         }
         img { @include center(); }
