--- a/assets/styles/partials/_google-maps.scss
+++ b/assets/styles/partials/_google-maps.scss
@@ -2,6 +2,6 @@
 /* Google Maps Style Declarations
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .gmap-wrapper {
-  width: 90%;
+  width: 100%;
   height: 200px;
 }
