--- a/assets/styles/partials/_main.scss
+++ b/assets/styles/partials/_main.scss
@@ -162,7 +162,8 @@
   z-index: 0;
 }
 
-.glyphicon {
+.glyphicon,
+.material-icons {
   &-tag,
   &-tags { padding-right: 0.5rem; }
   .panel-body &:first-child,
@@ -217,6 +218,7 @@
     }
   }
   &-body {
+    .material-icons { font-size: 16px; }
     [class^='tl-'] {
       margin: 1rem 0 0;
       .toggle-glyph {
